# wave-simulation

./: CMakeLists.txt
docs/: 2D Wave Simulation.md  Schrodinger Wave Simulation.md  stencil_diagram.drawio
src/: common.hpp  main.cpp  main_schrodinger.cpp  schrodinger_renderer.hpp  schrodinger_sim.hpp  sizes.hpp  ui.hpp  wave_sim.hpp  wave_sim_renderer.hpp
src/res/: roboto-regular.h
